# spice-streaming-agent

./: .gitignore  .gitlab-ci.yml  .gitmodules  LICENSE  Makefile  Makefile.am  NEWS  README  autogen.sh  configure.ac  spice-streaming-agent.pc.in  spice-streaming-agent.spec.in
data/: 90-spice-guest-streaming.rules  spice-streaming.desktop.in
include/spice-streaming-agent/: Makefile.am  display-info.hpp  error.hpp  errors.hpp  frame-capture.hpp  plugin.hpp  x11-display-info.hpp
m4/: manywarnings.m4  spice-compile-warnings.m4
src/: .gitignore  Makefile  Makefile.am  concrete-agent.cpp  concrete-agent.hpp  cursor-updater.cpp  cursor-updater.hpp  display-info.cpp  error.cpp  error.hpp  errors.cpp  frame-log.cpp  frame-log.hpp  gst-plugin.cpp  hexdump.c  hexdump.h  jpeg.cpp  jpeg.hpp  message.hpp  mjpeg-fallback.cpp  mjpeg-fallback.hpp  plugin.cpp  spice-streaming-agent.cpp  static-plugin.cpp  static-plugin.hpp  stream-port.cpp  stream-port.hpp  stream.cpp  stream.hpp  utils.cpp  utils.hpp  x11-cursor.cpp  x11-cursor.hpp  x11-display-info.cpp
src/unittests/: .gitignore  Makefile.am  hexdump.c  hexdump.sh  hexdump1.out  hexdump2.out  hexdump3.in  hexdump3.out  spice-catch.hpp  test-hexdump.sh  test-mjpeg-fallback.cpp  test-stream-port.cpp
